--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "query-string",
+	"name": "query-string-es5",
 	"version": "6.1.0",
 	"description": "Parse and stringify URL query strings",
 	"license": "MIT",
