--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "query-string-es5",
-	"version": "6.1.2",
-	"description": "Parse and stringify URL query strings",
+	"version": "6.1.3",
+	"description": "Parse and stringify URL query strings - this version is transpiled with babel, and minor manual changes regarding dependecy package for es5 compability.",
 	"license": "MIT",
 	"repository": "sindresorhus/query-string",
 	"author": {
